RESOLVED FIXED131500
Web Inspector: Breakpoint in gutter has clipped / broken border image.
https://bugs.webkit.org/show_bug.cgi?id=131500
Summary Web Inspector: Breakpoint in gutter has clipped / broken border image.
Joseph Pecoraro
Reported 2014-04-10 11:32:30 PDT
Created attachment 229061 [details] [IMAGE] Issue * SUMMARY See attached screenshot. Broken breakpoint tip in gutter. * STEPS TO REPRODUCE 1. Load <http://bogojoker.com/shell/> in Safari 2. Set a breakpoint on easySlider.min.js:56:21 => broken breakpoint icon in gutter
Attachments
[IMAGE] Issue (282.00 KB, image/png)
2014-04-10 11:32 PDT, Joseph Pecoraro
no flags
Test reduction (3.04 KB, text/html)
2014-04-10 12:20 PDT, alan
no flags
Patch (7.14 KB, patch)
2014-04-10 13:39 PDT, alan
no flags
Joseph Pecoraro
Comment 1 2014-04-10 11:33:04 PDT
CSS for this is: border-image-source: -webkit-image-set(url(../Images/Breakpoint.png) 1x, url(../Images/Breakpoint@2x.png) 2x);
Joseph Pecoraro
Comment 2 2014-04-10 11:40:31 PDT
Looks like this was caused by: <http://trac.webkit.org/changeset/166925> NOTE: This is a non-retina (1x) machine.
alan
Comment 3 2014-04-10 11:43:15 PDT
I can repro it on 2x display. It looks terrible.
Joseph Pecoraro
Comment 4 2014-04-10 11:43:30 PDT
More accurately the CSS is: .text-editor > .CodeMirror .has-breakpoint .CodeMirror-linenumber::before { position: absolute; top: 0; left: 0; bottom: 0; right: -7px; content: ""; z-index: -2; border-image-source: -webkit-image-set(url(../Images/BreakpointInactive.png) 1x, url(../Images/BreakpointInactive@2x.png) 2x); border-image-slice: 3 7 3 3 fill; border-width: 3px 7px 3px 3px; }
alan
Comment 5 2014-04-10 12:20:22 PDT
Created attachment 229069 [details] Test reduction
alan
Comment 6 2014-04-10 13:39:24 PDT
Joseph Pecoraro
Comment 7 2014-04-10 13:41:08 PDT
Comment on attachment 229076 [details] Patch r=me, Thanks!
WebKit Commit Bot
Comment 8 2014-04-10 15:10:14 PDT
Comment on attachment 229076 [details] Patch Clearing flags on attachment: 229076 Committed r167090: <http://trac.webkit.org/changeset/167090>
WebKit Commit Bot
Comment 9 2014-04-10 15:10:19 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10 2014-04-10 16:55:57 PDT
Radar WebKit Bug Importer
Comment 11 2014-04-10 16:59:19 PDT
Note You need to log in before you can comment on or make changes to this bug.