Web Inspector: Breakpoint in gutter has clipped / broken border image. https://bugs.webkit.org/show_bug.cgi?id=131500

Reviewed by Joseph Pecoraro.

Typo in r166925.

Source/WebCore:

Test: fast/borders/border-image-slice-missing-right.html

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::paintNinePieceImage):

LayoutTests:

* fast/borders/border-image-slice-missing-right-expected.html: Added.
* fast/borders/border-image-slice-missing-right.html: Added.


Canonical link: https://commits.webkit.org/149571@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167090 268f45cc-cd09-0410-ab3c-d52691b4dbfc